# aramaic-root-atlas

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  app.py  pyproject.toml  render.yaml
aramaic_core/: __init__.py  affixes.py  affixes_hebrew.py  characters.py  cognates.py  corpus.py  extractor.py  glosser.py
data/: i18n.json
data/corpora/: biblical_aramaic.csv  peshitta_ot.csv  targum_onkelos.csv
data/roots/: cognates.json  semantic_fields.json
data/translations/: translations_el.json
docs/: API.md  PRD.md  SOURCES.md
docs/superpowers/plans/: 2026-03-29-morphological-parser-lexical-profile.md  2026-04-22-interlinear.md
docs/superpowers/specs/: 2026-03-29-morphological-parser-lexical-profile-design.md  2026-04-22-interlinear-design.md
scripts/: add_gloss_translations.py  fetch_biblical_aramaic.py  fetch_ot_translations.py  fetch_targum_onkelos.py  generate_greek_cognates.py  generate_new_cognates.py  generate_semantic_fields.py
static/: autocomplete.js  style.css
static/js/: global.js  tour.js
templates/: about.html  annotations.html  base.html  bookmarks.html  browse.html  collocations.html  concordance.html  constellation.html  diachronic.html  hapax.html  heatmap.html  index.html  interlinear.html  parallel.html  parse.html  passage_profile.html  read.html  semantic_fields.html  visualize.html
tests/: conftest.py  test_passage_profile.py  test_word_parse.py
