[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aramaic-root-atlas"
version = "0.1.0"
description = "A cross-corpus triliteral root explorer for Aramaic literature"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
